# psqlui

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  ruff.toml
design/: README.md  architecture.md  implementation_plan.md  ops_quality.md  plugin_contract.md  product_overview.md  progress_log.md  roadmap.md  sql_intelligence.md  ui_flows.md
docs/: connections.md  plugins.md
examples/: __init__.py
examples/plugins/: __init__.py  hello_world.py
psqlui/: __init__.py  __main__.py  app.py  config.py  connections.py  models.py  providers.py  query.py  session.py
psqlui/plugins/: __init__.py  loader.py  providers.py  registry.py  types.py
psqlui/sqlintel/: __init__.py  catalog.py  debounce.py  functions.py  metadata.py  models.py  service.py  snippets.py
psqlui/widgets/: __init__.py  navigation_sidebar.py  query_pad.py  sidebar_panel.py  status_bar.py
scripts/: setup_sample_db.py
tests/: conftest.py  test_config.py  test_connections.py  test_query.py  test_session.py  test_smoke.py
tests/plugins/: test_app_integration.py  test_loader.py  test_registry.py
tests/sqlintel/: test_service.py
